// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChipMultiSelect renders correctly 1`] = `
<div>
  <div
    class="mdc-chip googlesitekit-chip"
    data-chip-id="channels"
    tabindex="0"
  >
    <div
      class="mdc-chip__checkmark"
    >
      <svg
        class="mdc-chip__checkmark-svg"
        focusable="false"
        viewBox="-2 -3 30 30"
      >
        <path
          class="mdc-chip__checkmark-path"
          d="M1.73,12.91 8.1,19.28 22.79,4.59"
          fill="none"
          stroke="black"
        />
      </svg>
    </div>
    <div
      class="mdc-chip__text"
    >
      Channels
    </div>
  </div>
  <div
    class="mdc-chip googlesitekit-chip"
    data-chip-id="locations"
    tabindex="0"
  >
    <div
      class="mdc-chip__checkmark"
    >
      <svg
        class="mdc-chip__checkmark-svg"
        focusable="false"
        viewBox="-2 -3 30 30"
      >
        <path
          class="mdc-chip__checkmark-path"
          d="M1.73,12.91 8.1,19.28 22.79,4.59"
          fill="none"
          stroke="black"
        />
      </svg>
    </div>
    <div
      class="mdc-chip__text"
    >
      Locations
    </div>
  </div>
  <div
    class="mdc-chip googlesitekit-chip"
    data-chip-id="devices"
    tabindex="0"
  >
    <div
      class="mdc-chip__checkmark"
    >
      <svg
        class="mdc-chip__checkmark-svg"
        focusable="false"
        viewBox="-2 -3 30 30"
      >
        <path
          class="mdc-chip__checkmark-path"
          d="M1.73,12.91 8.1,19.28 22.79,4.59"
          fill="none"
          stroke="black"
        />
      </svg>
    </div>
    <div
      class="mdc-chip__text"
    >
      Devices
    </div>
  </div>
</div>
`;

exports[`ChipMultiSelect toggles chips 1`] = `
<div>
  <div
    class="mdc-chip mdc-chip--selected googlesitekit-chip"
    data-chip-id="channels"
    tabindex="0"
  >
    <div
      class="mdc-chip__checkmark"
    >
      <svg
        class="mdc-chip__checkmark-svg"
        focusable="false"
        viewBox="-2 -3 30 30"
      >
        <path
          class="mdc-chip__checkmark-path"
          d="M1.73,12.91 8.1,19.28 22.79,4.59"
          fill="none"
          stroke="black"
        />
      </svg>
    </div>
    <div
      class="mdc-chip__text"
    >
      Channels
    </div>
  </div>
  <div
    class="mdc-chip googlesitekit-chip"
    data-chip-id="locations"
    tabindex="0"
  >
    <div
      class="mdc-chip__checkmark"
    >
      <svg
        class="mdc-chip__checkmark-svg"
        focusable="false"
        viewBox="-2 -3 30 30"
      >
        <path
          class="mdc-chip__checkmark-path"
          d="M1.73,12.91 8.1,19.28 22.79,4.59"
          fill="none"
          stroke="black"
        />
      </svg>
    </div>
    <div
      class="mdc-chip__text"
    >
      Locations
    </div>
  </div>
  <div
    class="mdc-chip googlesitekit-chip"
    data-chip-id="devices"
    tabindex="0"
  >
    <div
      class="mdc-chip__checkmark"
    >
      <svg
        class="mdc-chip__checkmark-svg"
        focusable="false"
        viewBox="-2 -3 30 30"
      >
        <path
          class="mdc-chip__checkmark-path"
          d="M1.73,12.91 8.1,19.28 22.79,4.59"
          fill="none"
          stroke="black"
        />
      </svg>
    </div>
    <div
      class="mdc-chip__text"
    >
      Devices
    </div>
  </div>
</div>
`;

exports[`ChipMultiSelect toggles chips 2`] = `
<div>
  <div
    class="mdc-chip mdc-chip--selected googlesitekit-chip"
    data-chip-id="channels"
    tabindex="0"
  >
    <div
      class="mdc-chip__checkmark"
    >
      <svg
        class="mdc-chip__checkmark-svg"
        focusable="false"
        viewBox="-2 -3 30 30"
      >
        <path
          class="mdc-chip__checkmark-path"
          d="M1.73,12.91 8.1,19.28 22.79,4.59"
          fill="none"
          stroke="black"
        />
      </svg>
    </div>
    <div
      class="mdc-chip__text"
    >
      Channels
    </div>
  </div>
  <div
    class="mdc-chip mdc-chip--selected googlesitekit-chip"
    data-chip-id="locations"
    tabindex="0"
  >
    <div
      class="mdc-chip__checkmark"
    >
      <svg
        class="mdc-chip__checkmark-svg"
        focusable="false"
        viewBox="-2 -3 30 30"
      >
        <path
          class="mdc-chip__checkmark-path"
          d="M1.73,12.91 8.1,19.28 22.79,4.59"
          fill="none"
          stroke="black"
        />
      </svg>
    </div>
    <div
      class="mdc-chip__text"
    >
      Locations
    </div>
  </div>
  <div
    class="mdc-chip googlesitekit-chip"
    data-chip-id="devices"
    tabindex="0"
  >
    <div
      class="mdc-chip__checkmark"
    >
      <svg
        class="mdc-chip__checkmark-svg"
        focusable="false"
        viewBox="-2 -3 30 30"
      >
        <path
          class="mdc-chip__checkmark-path"
          d="M1.73,12.91 8.1,19.28 22.79,4.59"
          fill="none"
          stroke="black"
        />
      </svg>
    </div>
    <div
      class="mdc-chip__text"
    >
      Devices
    </div>
  </div>
</div>
`;

exports[`ChipMultiSelect toggles chips 3`] = `
<div>
  <div
    class="mdc-chip googlesitekit-chip"
    data-chip-id="channels"
    tabindex="0"
  >
    <div
      class="mdc-chip__checkmark"
    >
      <svg
        class="mdc-chip__checkmark-svg"
        focusable="false"
        viewBox="-2 -3 30 30"
      >
        <path
          class="mdc-chip__checkmark-path"
          d="M1.73,12.91 8.1,19.28 22.79,4.59"
          fill="none"
          stroke="black"
        />
      </svg>
    </div>
    <div
      class="mdc-chip__text"
    >
      Channels
    </div>
  </div>
  <div
    class="mdc-chip mdc-chip--selected googlesitekit-chip"
    data-chip-id="locations"
    tabindex="0"
  >
    <div
      class="mdc-chip__checkmark"
    >
      <svg
        class="mdc-chip__checkmark-svg"
        focusable="false"
        viewBox="-2 -3 30 30"
      >
        <path
          class="mdc-chip__checkmark-path"
          d="M1.73,12.91 8.1,19.28 22.79,4.59"
          fill="none"
          stroke="black"
        />
      </svg>
    </div>
    <div
      class="mdc-chip__text"
    >
      Locations
    </div>
  </div>
  <div
    class="mdc-chip googlesitekit-chip"
    data-chip-id="devices"
    tabindex="0"
  >
    <div
      class="mdc-chip__checkmark"
    >
      <svg
        class="mdc-chip__checkmark-svg"
        focusable="false"
        viewBox="-2 -3 30 30"
      >
        <path
          class="mdc-chip__checkmark-path"
          d="M1.73,12.91 8.1,19.28 22.79,4.59"
          fill="none"
          stroke="black"
        />
      </svg>
    </div>
    <div
      class="mdc-chip__text"
    >
      Devices
    </div>
  </div>
</div>
`;
